# SSTx

./: .gitignore  collect_data.py  compare.py  compareCost.py  config.yaml  factories.py  fusionPlanning.py  fusionTest.py  fusion_comparison.csv  ik.py  planning_only.py  plotComparison.py  plot_fusion_solutions.py  pushingPlanning.py  sim.py  sim_network.py  simplePlanning.py  testBackwardModel.py  testClosestPose.py  testForwardModel.py  test_fusion_car.py  test_fusion_dublin.py  test_get_children.py  test_optimization.py  train_active.py  train_model.py
active_learning/: active_learning.py  kernel.py
aorrt/: aorrt.h
aorrt/src/: aorrt.cpp
assets/banana/: banana.urdf
assets/cracker_box/: cracker_box.urdf
assets/cracker_box_flipped/: cracker_box_flipped.urdf
assets/lab_scene/: lab_scene.urdf
assets/lab_scene_bin/: lab_scene_bin.urdf
assets/mug/: mug.urdf
assets/mustard_bottle/: mustard_bottle.urdf
assets/mustard_bottle_flipped/: mustard_bottle_flipped.urdf
assets/ur10/: __init__.py  ur10_robotis_d435.srdf  ur10_robotis_d435.urdf  ur10_robotis_d435_pri.srdf  ur10_robotis_d435_pri.urdf  ur10_rod_d435.urdf
configs/: airplane.yaml  car.yaml  pushing.yaml
fusion/: fusion.h
fusion/src/: fusion.cpp
geometry/: pose.py  random_push.py  trajectory.py
models/: model.py  physics.py  torch_loss_se2.py  torch_model.py
planning/: controlSamplers.py  planning_utils.py  propagators.py  push_to_edge.py  random_push.py
planning/fusion/: fusion.h
playgrounds/: car_demo.py  closedLoopPushing.py  fusion_solutions.txt  genesisDemo.py  komo_test.py  mpcDemo.py  sst-drake.py  test.py
playgrounds/fusion/: car_simulation.py  fusionTest.py  utils.py  (+3 more)
playgrounds/new_planner/: CMakeLists.txt  fusion.cpp  fusion.h  logging  main.cpp  main.py  new_planning.py  print_ompl_version.cpp  python_bindings.cpp  se2.h  setup.py  test_distance  utils.cpp  utils.h
playgrounds/new_planner/FUSION.egg-info/: PKG-INFO  SOURCES.txt
playgrounds/testPlanner/: CMakeLists.txt  custom_propagator_demo.py  planning.py  python_bindings.cpp  setup.py  testPlanner.cpp  testPlanner.h  test_configurable.py
playgrounds/testPlanner/my_custom_planner_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: childrenHandler.py  configHandler.py  se2.h  solutionsHandler.py  threadHandler.py  utils.py
(+4 files in other folders)
